<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89F0B2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#E7EE9B"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temperatura"
            android:textColor="#FF5722"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCenFah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#E91E63"
                android:text="@string/btnTemperatura1"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnFahCen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#9C27B0"
                android:text="@string/btnTemperatura2"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFahKel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#FF9800"
                android:text="@string/btnTemperatura3"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnCenKel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/btnTemperatura4"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#E6BCB9"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Area"
            android:textColor="#F44336"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHectMet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#009688"
                android:text="@string/btnArea1"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnMetHect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#FFC107"
                android:text="@string/btnArea2"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnmetKil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#E91E63"
                android:text="@string/btnArea3"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnKilMet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="#673AB7"
                android:text="@string/btnArea4"
                android:textColor="#FFF"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>