<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8E1E7"
    android:orientation="horizontal"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unidad"
            android:textColor="#9C27B0"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/Unidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="#fff"
            android:inputType="number"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E9683E"
            android:text="@string/Calcular"
            android:textColor="#fff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="#4C51AF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/EtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="#fff"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnAtras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:text="@string/Atras"
            android:textColor="#fff"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>